# taskvine-report-tool

./: .gitignore  BUILD_DEPLOY_GUIDE.md  COPYING  MANIFEST.in  README.md  WIP_app.py  WIP_generated_csv.py  all_clean.sh  all_generate.sh  app.py  daskvine_test.py  data_parse.py  data_process.py  file_info.py  generate_csv.py  generate_csv_temp.py  generate_data.py  generate_graph.py  manager_info.py  peer_transfer.py  plot_custom_graph.py  pyproject.toml  requirements.txt  setup.py  t.py  task_info.py  test_api.py  test_conda_build.sh  vine_report.py  vine_report_generate_graph.py  worker_info.py
conda-recipe/: .conda-build-ignore  LICENSE  meta.yaml
imgs/: dsk.json
pyplot/: README.md  _config.py  _tools.py  accumulated_disk_usage.py  config.py  cumulative_tasks_completed.py  file_accumulation_all.py  file_accumulation_manager.py  file_accumulation_worker.py  file_consumer_count.py  file_replica_count.py  file_retention_rate.py  file_retention_time.py  file_temp_size.py  individual_workers_disk_usage.py  task_category_execution_time.py  task_completion.py  task_execution_time_cdf.py  task_states_over_time.py  task_throughput_workers.py  temp_replication_count.py  temp_size.py  worker_accumulated_disk_usage.py
routes/: file_concurrent_replicas.py  file_created_size.py  file_replicas.py  file_retention_time.py  file_sizes.py  file_transferred_size.py  file_transfers.py  lock.py  logger.py  runtime_state.py  runtime_template.py  runtime_template_management.py  storage_consumption.py  subgraphs.py  task_completion_percentiles.py  task_concurrency.py  task_dependencies.py  task_dependents.py  task_execution_details.py  task_execution_time.py  task_response_time.py  task_retrieval_time.py  task_subgraphs.py  utils.py  worker_concurrency.py  worker_executing_tasks.py  worker_lifetime.py  worker_storage_consumption.py  worker_transfers.py  worker_waiting_retrieval_tasks.py
src/: data_parse.py  file_info.py  logger.py  manager_info.py  task_info.py  utils.py  worker_info.py
static/css/: content.css  legend.css  logtext.css  report.css  section.css  sidebar.css  support.css  toolbox.css
static/js/: category_information.js  draw_tables.js  execution_details.js  execution_time_distribution.js  file_replicas.js  file_sizes.js  file_transfers.js  graph.js  index.js  log_viewer.js  logtext.js  main.js  manager.js  manager_disk_usage.js  manager_file_life_cycle.js  module_definitions.js  report.js  sidebar.js  storage_consumption.js  subgraphs.js  task_concurrency.js  task_execution_details.js  task_execution_time.js  task_response_time.js  tasks_concurrency.js  tools.js  worker_concurrency.js  worker_disk_usage.js  worker_transfers.js
taskvine_report/: __init__.py  utils.py
templates/: debug.html  dsk.json  index.html  performance.html  report.html  transactions.html
test/: .gitignore  test_api.py
(+92 files in other folders)
