[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskvine-report"
version = "3.0.0"
description = "Visualization and analysis tool for TaskVine execution logs"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Collaborative Computing Lab (CCL), University of Notre Dame", email = "jzhou24@nd.edu"},
]
maintainers = [
    {name = "Collaborative Computing Lab (CCL), University of Notre Dame", email = "jzhou24@nd.edu"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Monitoring",
]
keywords = ["taskvine", "workflow", "visualization", "monitoring", "distributed-computing", "ccl", "notre-dame"]
dependencies = [
    "flask>=2.0.0",
    "pandas>=1.3.0",
    "cloudpickle>=2.0.0",
    "tqdm>=4.60.0",
    "pytz>=2021.1",
    "graphviz>=0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[project.urls]
Homepage = "https://github.com/cooperative-computing-lab/taskvine-report-tool"
Documentation = "https://ccl.cse.nd.edu/software/taskvine/"
Repository = "https://github.com/cooperative-computing-lab/taskvine-report-tool.git"
"Bug Reports" = "https://github.com/cooperative-computing-lab/taskvine-report-tool/issues"
"CCL Homepage" = "https://ccl.cse.nd.edu/"

[project.scripts]
vine_parse = "taskvine_report.cli.parse:main"
vine_report = "taskvine_report.cli.report:main"

[tool.setuptools]
packages = ["taskvine_report", "taskvine_report.cli", "taskvine_report.routes", "taskvine_report.src"]
include-package-data = true

[tool.setuptools.package-data]
"taskvine_report" = ["templates/*", "templates/**/*", "static/*", "static/**/*", "static/**/**/*"]

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=taskvine_report --cov-report=term-missing" 